# edgedb-query

./: .gitignore  Cargo.toml
src/: field.rs  filter.rs  forin.rs  group.rs  insert.rs  lib.rs  order_by.rs  select.rs  update.rs  value.rs  with.rs
