[package]
name = "edgedb-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust", rev = "61ce47d" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust", rev = "61ce47d" }
edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust", rev = "61ce47d" }

either = "1.8"
tap = "1.0"
dyn-clone = "1.0"
iter_tools = "0.1"
tracing = "0.1"
async-trait = "0.1"
