[package]
name = "edgedb-query"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust", rev = "61ce47d" }
edgedb-tokio = { git = "https://github.com/syrflover/edgedb-rust", rev = "55e1098" }
# edgedb-tokio = { path = "../edgedb-rust/edgedb-tokio" }
# edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust", rev = "61ce47d", features = ["with-chrono"] }
edgedb-protocol = { git = "https://github.com/syrflover/edgedb-rust", rev = "55e1098", features = ["with-chrono"] }
# edgedb-protocol = { path = "../edgedb-rust/edgedb-protocol", features = ["with-chrono"] }
# edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust", rev = "61ce47d" }
edgedb-derive = { git = "https://github.com/syrflover/edgedb-rust", rev = "55e1098" }
# edgedb-derive = { path = "../edgedb-rust/edgedb-derive" }

either = "1.8"
tap = "1.0"
dyn-clone = "1.0"
iter_tools = "0.1"
tracing = "0.1"
async-trait = "0.1"
chrono = "0.4.24"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["macros"] }
tracing-subscriber = "0.3.16"
