[package]
name = "edgedb-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust", rev = "60309cf" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust", rev = "60309cf" }

either = "1.9"
tap = "1.0"
dyn-clone = "1.0"
iter_tools = "0.1"
tracing = "0.1"
async-trait = "0.1"
